--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body{
 }
 
 .banner{
-    background-image: url("banner.jpeg");
+    background-image: url("../img/banner.jpeg");
     background-size: cover;
     height: 400px;
     padding:50px 0;
